Fixed permissions on GitHub workflows

--- a/.github/workflows/push-export.yml
+++ b/.github/workflows/push-export.yml
@@ -5,6 +5,10 @@ on:
       - main
       # - staging
       # - "feature/**"
+
+permissions:
+  contents: write
+
 env:
   GODOT_VERSION: 3.5
   EXPORT_NAME: godot-game-template
