--- a/.github/workflows/dispatch-export.yml
+++ b/.github/workflows/dispatch-export.yml
@@ -27,6 +27,9 @@ on:
         required: false
         default: "false"
 
+permissions:
+  contents: write
+
 env:
   GODOT_VERSION: ${{ github.event.inputs.godot_version }}
   EXPORT_PLATFORM: ${{ github.event.inputs.export_platform }}
